Bunch more documentation on nmake build

--- a/tip/477.md
+++ b/tip/477.md
@@ -16,43 +16,53 @@
     * <a href='#toc-7'>Non-goals</a>
 * <a href='#toc-8'>Command line interface</a>
     * <a href='#toc-9'>Build configuration macros</a>
-* <a href='#toc-10'>Basic makefiles</a>
-    * <a href='#toc-11'>Makefile for a basic Tcl extension</a>
-    * <a href='#toc-12'>Makefile for a basic Tk extension</a>
-* <a href='#toc-13'>The nmake build environment</a>
-    * <a href='#toc-14'>The `rules-ext.vc` file</a>
-    * <a href='#toc-15'>The `nmakehlp.c` program</a>
-    * <a href='#toc-16'>The `rules.vc` file</a>
-    * <a href='#toc-17'>The `targets.vc` file</a>
-    * <a href='#toc-18'>Distributing the nmake build system</a>
-* <a href='#toc-19'>Locating headers and libraries</a>
-    * <a href='#toc-20'>Locating Tcl</a>
-    * <a href='#toc-21'>Locating Tk</a>
-* <a href='#toc-22'>Customizing and extending the build environment</a>
-    * <a href='#toc-23'>Location of extension sources and implicit rules</a>
-    * <a href='#toc-24'>Output directories and file names</a>
-    * <a href='#toc-25'>Implicit rules</a>
-    * <a href='#toc-26'>Compiler configuration</a>
-        * <a href='#toc-27'>Compiler flags and switches</a>
-        * <a href='#toc-28'>Passing additional compiler switches</a>
-    * <a href='#toc-29'>Linker flags</a>
-    * <a href='#toc-30'>Windows resource files</a>
-    * <a href='#toc-31'>Generating pkgIndex.tcl</a>
-    * <a href='#toc-32'>Targets</a>
-        * <a href='#toc-33'>The default target</a>
-        * <a href='#toc-34'>Predefined targets</a>
-        * <a href='#toc-35'>Standard targets</a>
-        * <a href='#toc-36'>Extending targets</a>
-        * <a href='#toc-37'>Ignoring standard targets</a>
-    * <a href='#toc-38'>Stubs</a>
-    * <a href='#toc-39'>Versioning</a>
-    * <a href='#toc-40'>Installation</a>
-    * <a href='#toc-41'>Manifests</a>
-    * <a href='#toc-42'>Documentation and demos</a>
-    * <a href='#toc-43'>Utility macros</a>
-    * <a href='#toc-44'>Sanity checking build configuration</a>
-* <a href='#toc-45'>Reference Implementation</a>
-* <a href='#toc-46'>Copyright</a>
+        * <a href='#toc-10'>Directory paths `INSTALLDIR`, `TMP_DIR`, `OUT_DIR`</a>
+        * <a href='#toc-11'>The `OPTS` macro</a>
+        * <a href='#toc-12'>The `STATS` macro</a>
+        * <a href='#toc-13'>The `CHECKS` macro`</a>
+        * <a href='#toc-14'>The `TESTPAT` macro</a>
+* <a href='#toc-15'>Basic makefiles</a>
+    * <a href='#toc-16'>Makefile for a basic Tcl extension</a>
+    * <a href='#toc-17'>Makefile for a basic Tk extension</a>
+* <a href='#toc-18'>The nmake build environment</a>
+    * <a href='#toc-19'>The `rules-ext.vc` file</a>
+    * <a href='#toc-20'>The `nmakehlp.c` program</a>
+    * <a href='#toc-21'>The `rules.vc` file</a>
+    * <a href='#toc-22'>The `targets.vc` file</a>
+    * <a href='#toc-23'>Distributing the nmake build system</a>
+* <a href='#toc-24'>Locating headers and libraries</a>
+    * <a href='#toc-25'>Locating Tcl</a>
+    * <a href='#toc-26'>Locating Tk</a>
+* <a href='#toc-27'>Customizing and extending the build environment</a>
+    * <a href='#toc-28'>Location of extension sources and implicit rules</a>
+    * <a href='#toc-29'>Output directories and file names</a>
+    * <a href='#toc-30'>Build rules</a>
+        * <a href='#toc-31'>Standard build rules</a>
+        * <a href='#toc-32'>Passing additional compiler switches</a>
+        * <a href='#toc-33'>Defining custom build rules</a>
+            * <a href='#toc-34'>Macros for compilation</a>
+            * <a href='#toc-35'>Macros for linking</a>
+    * <a href='#toc-36'>Windows resource files</a>
+    * <a href='#toc-37'>Generating pkgIndex.tcl</a>
+    * <a href='#toc-38'>Targets</a>
+        * <a href='#toc-39'>The default target</a>
+        * <a href='#toc-40'>Predefined targets</a>
+        * <a href='#toc-41'>Standard targets</a>
+        * <a href='#toc-42'>Extending targets</a>
+        * <a href='#toc-43'>Ignoring standard targets</a>
+    * <a href='#toc-44'>Stubs</a>
+        * <a href='#toc-45'>Linking with Tcl and Tk stubs libraries</a>
+        * <a href='#toc-46'>Generating extension stubs libraries</a>
+    * <a href='#toc-47'>Versioning</a>
+    * <a href='#toc-48'>Installation</a>
+    * <a href='#toc-49'>Manifests</a>
+    * <a href='#toc-50'>Documentation and demos</a>
+    * <a href='#toc-51'>Utility macros</a>
+    * <a href='#toc-52'>Sanity checking build configuration</a>
+* <a href='#toc-53'>Reference implementation</a>
+* <a href='#toc-54'>Examples</a>
+    * <a href='#toc-55'>Incompatible changes</a>
+* <a href='#toc-56'>Copyright</a>
 
 <!-- TOC END -->
 
@@ -188,9 +198,36 @@ are detailed later.
 The macros passed on the command line are for the most part the same
 as in the current system. They specify the build configuration such as
 whether an extension is built as a static or shared library,
-instrumentation, generation of debug information and so on. The most
-commonly useful macros and their possible values are listed below.
-For a full list, see the comments in `rules.vc` file.
+instrumentation, generation of debug information and so on. 
+
+Here we describe the macros that can be specifed for Tcl
+and all extensions. An extension may define additional macros as well
+as additional values for the macros defined here.
+
+### <a id='toc-10'></a>Directory paths `INSTALLDIR`, `TMP_DIR`, `OUT_DIR`
+
+The installation directory is specified via the `INSTALLDIR` macro on
+the command line. If unspecified, this defaults to `C:\Tcl`.
+**NOTE**: this is a change from the current default of
+`C:\Program Files\Tcl` because the latter may not have access
+permissions for the user.
+
+The `OUT_DIR` macro specifies the directory in which to place the
+output executables and libraries while `TMP_DIR` specifies the
+directory for object files. If unspecified, the defaults used are
+based on the options specified on the command line, compiler version
+and target architecture.
+The output directory path placed in `OUT_DIR` has the form
+`Release_COMPILERVERSION` for x86 release builds and
+`Release_AMD64_COMPILERVERSION` for x64 release builds (the discrepancy
+in inclusion of architecture is historical). For debug builds 
+(when `symbols` is included in `OPTS` on the command line), `Release_`
+is replaced by `Debug_`.
+The object files directory path placed in `TMP_DIR` has the form
+`$(PROJECT)_ThreadedDynamic` or `$(PROJECT)_ThreadedStatic` depending
+on whether the build options specify dynamic or static linking.
+
+### <a id='toc-11'></a>The `OPTS` macro
 
 The `OPTS` macro controls the build configuration for the compiler and
 linker. Its value is a comma-separated list of option values, the more
@@ -200,10 +237,26 @@ common options being listed in the table below.
 Option | Effect
 -------|-------
 `none`|Nullifies other options even if they are specified.
-`static` | Builds the module as a static library instead of the default shared library
-`pdbs` | Generates PDB files with symbol information even for release builds
-`symbols` | Builds a debug version (no optimization, debug C runtime, PDB's)
-`staticpkg` | Specifies `registry` and `dde` extensions should be statically bound (`tclsh` and `wish` only)
+`static`|Builds the module as a static library instead of the default shared library.
+`pdbs`|Generates PDB files with symbol information even for release builds.
+`symbols`|Builds a debug version (no optimization, debug C runtime, PDB's).
+`staticpkg`|Specifies `registry` and `dde` extensions should be statically bound (`tclsh` and `wish` only).
+`msvcrt`|Links against the dynamic C runtime (see below).
+`nomsvcrt`|Links against the static C runtime (see below). Overrides `msvcrt`.
+`profile`|Produces an image that can be used with the Windows Performance Tools profiler.
+`pgi`|Instruments the image for profile guided optimization.
+`pgo`|Enables profile guided optimization.
+`unchecked`|Links the debug build when `symbols` is specified against the non-debug runtime.
+
+The `msvcrt` and `nomsvcrt` options control which C runtime library is
+passed to the link step. By default, shared library builds of Tcl link
+against the C runtime DLL while the static
+Tcl builds link against the static C runtime library. Specifying the 
+`nomsvcrt` option will link the shared Tcl library builds to link
+against the static C runtime. Similarly, specifying the `msvcrt`
+option will cause the static Tcl library to link against the C runtime DLL.
+
+### <a id='toc-12'></a>The `STATS` macro
 
 The `STATS` macro, also specified as a comma-separated list,
 controls generation of instrumentation code as shown
@@ -215,6 +268,8 @@ Option|Effect
 `none`|Turns off all instrumentation irrespective of other options being specified.
 `memdbg`|Enables instrumentation of memory allocation.
 `compdbg`|Enables byte compiler logging for debugging purposes.
+
+### <a id='toc-13'></a>The `CHECKS` macro`
 
 The `CHECKS` macro configure additional compiler checks and warnings.
 
@@ -233,9 +288,16 @@ of deprecated functions.
 >
     nmake /f makefile.vc OPTS=static,pdbs STATS=memdbg CHECKS=nodep,fullwarn
 
-# <a id='toc-10'></a>Basic makefiles
+### <a id='toc-14'></a>The `TESTPAT` macro
 
-## <a id='toc-11'></a>Makefile for a basic Tcl extension
+The `TESTPAT` macro specifies the name of the file containing the
+tests to be run. This is used by the standard `test` target described
+later.
+
+
+# <a id='toc-15'></a>Basic makefiles
+
+## <a id='toc-16'></a>Makefile for a basic Tcl extension
 
 **NOTE:** By convention, makefiles using the nmake system are named
 `makefile.vc`. Here we refer to them simply as makefile.
@@ -298,9 +360,9 @@ The two macros that need to be defined for a basic extension are shown below.
 Macro|Description
 -----|-----------
 `PROJECT`|Name of the package. Must be defined before including `rules-ext.vc`.
-`PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` exactly as shown above.
+`PRJ_OBJS`|List of object and resource files for building the extension. The object files must be prefixed with `$(TMP_DIR)\` as shown above.
 
-## <a id='toc-12'></a>Makefile for a basic Tk extension
+## <a id='toc-17'></a>Makefile for a basic Tk extension
 
 In case of a Tk extension, the only change required is to set
 the `PROJECT_REQUIRES_TK` macro to `1` before including `rules-ext.vc`.
@@ -317,13 +379,13 @@ the `PROJECT_REQUIRES_TK` macro to `1` before including `rules-ext.vc`.
 
 All else remains the same as for a Tcl extension.
 
-# <a id='toc-13'></a>The nmake build environment
+# <a id='toc-18'></a>The nmake build environment
 
 The `nmake` build environment described above is implemented through 
 four files `rules-ext.vc`, `rules.vc`, `targets.vc` and 
 `nmakehlp.c`. The role of each is described in this section.
 
-## <a id='toc-14'></a>The `rules-ext.vc` file
+## <a id='toc-19'></a>The `rules-ext.vc` file
 
 The `rules-ext.vc` file is intended to be included by the extension's
 makefile to locate and load the latest compatible `rules.vc` file.  It
@@ -341,13 +403,13 @@ treated. When comparing versions, the files in the Tcl installation
 are used if they have the same major version as that in the
 extension's rules file and their minor version is the equal or greater. 
 
-## <a id='toc-15'></a>The `nmakehlp.c` program
+## <a id='toc-20'></a>The `nmakehlp.c` program
 The `nmakehlp.c` program has the same purpose and functionality as in
 the current system. It is unchanged and not detailed here. It is 
 compiled and invoked on the fly from nmake for some utility purposes
 such as extracting versions, searching for strings etc.
 
-## <a id='toc-16'></a>The `rules.vc` file
+## <a id='toc-21'></a>The `rules.vc` file
 
 This is the heart of the current nmake system and remains so, with
 enhancements to include as much of project-independent functionality
@@ -370,7 +432,7 @@ will have unmodified copies of this if they need to be build against
 older versions of Tcl. Otherwise, they will use the one installed with
 Tcl or from the Tcl sources if building against the latter.
 
-## <a id='toc-17'></a>The `targets.vc` file
+## <a id='toc-22'></a>The `targets.vc` file
 
 This file, *optionally* included by the extension's master makefile,
 defines some standard targets that relieves the extension from having
@@ -381,7 +443,7 @@ are expanded in the target rules.
 Inclusion of this file is optional in the sense that more complex
 makefiles may choose to define their own standard targets.
 
-## <a id='toc-18'></a>Distributing the nmake build system
+## <a id='toc-23'></a>Distributing the nmake build system
 
 To eliminate the issue of divergence between the nmake support files
 as well as the need for continual maintenance and update, the files
@@ -397,23 +459,17 @@ every time Tcl's version of these files change.* This also allows the
 extension to be built against older versions of Tcl that do not
 include these files in their installation.
 
-# <a id='toc-19'></a>Locating headers and libraries
+# <a id='toc-24'></a>Locating headers and libraries
 
 Building an extension requires Tcl, and optionally Tk, header files
 and libraries. 
 
-## <a id='toc-20'></a>Locating Tcl
+## <a id='toc-25'></a>Locating Tcl
 
 Tcl extensions need to locate either Tcl installed headers and
 libraries or the Tcl source directory.  The nmake build system locates
 the Tcl directory containing these by trying directories in the
 following order:
-
-The installation directory is specified via the `INSTALLDIR` macro on
-the command line. If unspecified, this defaults to `C:\Tcl`.
-**NOTE**: this is a change from the current default of
-`C:\Program Files\Tcl` because the latter may not have access
-permissions for the user.
 
 The location of the Tcl header files and libraries is specified
 with the `TCLDIR` macro.
@@ -451,7 +507,7 @@ Macro|Description
 `TCL_VERSION`|`$(TCL_MAJOR_VERSION)$(TCL_MINOR_VERSION)`
 `_TCL_H`|The path to the `tcl.h` header file.
 
-## <a id='toc-21'></a>Locating Tk
+## <a id='toc-26'></a>Locating Tk
 
 A similar method as above is used for extensions that build against Tk.
 The nmake build system locates directories in the
@@ -497,7 +553,7 @@ Macro|Description
 `TK_VERSION`|`$(TK_MAJOR_VERSION)$(TK_MINOR_VERSION)`
 `_TK_H`|The path to the `tk.h` header file.
 
-# <a id='toc-22'></a>Customizing and extending the build environment
+# <a id='toc-27'></a>Customizing and extending the build environment
 
 It is hoped that the basic makefile structure described earlier will
 suffice for the majority of extensions which follow standard conventions
@@ -526,7 +582,7 @@ These all require different levels of customization and extension and
 the nmake system tries to accomodate these with minimal effort as
 described in the following sections.
 
-## <a id='toc-23'></a>Location of extension sources and implicit rules
+## <a id='toc-28'></a>Location of extension sources and implicit rules
 
 The macro `ROOT` is set by the `rules.vc` to point to the root of the
 extension source tree. **This must be exactly one level above the
@@ -580,28 +636,7 @@ additional sources, you would add the lines below after including
 Here `cc32` and `pkgcflags` are standard macros defined within
 `rules.vc`. These are described later.
 
-## <a id='toc-24'></a>Output directories and file names
-
-Based on the options specified on the command line, compiler version
-and target architecture, the following macros are defined for
-the output directories:
-
->
-Macro|Description
------|-----------
-`OUT_DIR`|Directory to place output executables and libraries
-`TMP_DIR`|Directory to place all the object files
-
-The output directory path placed in `OUT_DIR` has the form
-`Release_COMPILERVERSION` for x86 release builds and
-`Release_AMD64_COMPILERVERSION` for x64 release builds (the discrepancy
-in inclusion of architecture is historical). For debug builds 
-(when `symbols` is included in `OPTS` on the command line), `Release_`
-is replaced by `Debug_`.
-
-The object files directory path placed in `TMP_DIR` has the form
-`$(PROJECT)_ThreadedDynamic` or `$(PROJECT)_ThreadedStatic` depending
-on whether the build options specify dynamic or static linking.
+## <a id='toc-29'></a>Output directories and file names
 
 In addition, `rules.vc` defines the macros shown below for the output
 files themselves. These are only generally needed by the extension
@@ -633,21 +668,110 @@ For most extension makefiles, these file names are not very relevant.
 However, they are needed when the default rules are not adequate,
 and the extension makefile needs to define its own.
 
-## <a id='toc-25'></a>Implicit rules
+## <a id='toc-30'></a>Build rules
 
-TBD
+### <a id='toc-31'></a>Standard build rules
+The nmake build system predefines some standard implicit rules. These
+rules will search the `$(ROOT)`, `$(WINDIR)`, `$(GENERICDIR)`
+and `$(COMPATDIR)` directories for a source file corresponding to an
+object file and compile it with the flags appropriate for the current
+build configuration.
 
-## <a id='toc-26'></a>Compiler configuration
+Similarly, a Windows version resource is compiled
+using the resource compiler by looking in directories $(RCDIR),
+$(WINDIR) for a resource definition file and generating one if
+necessary. This is described in a later section.
 
-The compiler is defined via the `cc32` macro. 
+These implicit rules are defined in `rules.vc` 
+(included indirectly through `rules-ext.vc`) and can be disabled for
+whatever reason by setting the macro `DISABLE_IMPLICIT_RULES` to `1`
+before inclusion of `rules-ext.vc`.
 
-### <a id='toc-27'></a>Compiler flags and switches
+### <a id='toc-32'></a>Passing additional compiler switches
 
-The flags and switches
-passed to the compiler are dependent on the build configuration such
-as whether a shared library is being built, debug options being in
-effect and so on. The `rules.vc` file defines these appropriately
-for a build configuration through the macros shown in the table below.
+By default, the constructed compiler flags include compiler include
+paths and preprocessor definitions common to all extensions. An
+extension may wish to extend these without having to define its own
+rules. This can be accomplished by defining the following macros 
+**before** including `rules-ext.vc`.
+
+>
+Macro|Description
+-----|-----------
+`PRJ_DEFINES`|Additional preprocessor defines of the form `-DMACRO=VALUE`
+`PRJ_INCLUDES`|Additional directories for locating C header files of the form `-IDIRECTORY`
+
+Similarly, if the extension requires additional libraries, they can be
+specified by defining the `PRJ_LIBS` macro before including `rules-ext.vc`.
+
+For example,
+
+>
+    ...
+	PRJ_DEFINES = -D_CRT_NONSTDC_NO_DEPRECATE -DHAVE_GUMBO	
+	PRJ_INCLUDE = -I"$(ROOT)\expat"
+    PRJ_LIBS = secur32.lib powerprf.lib
+	!include "rules-ext.vc"
+	...
+
+
+### <a id='toc-33'></a>Defining custom build rules
+
+At times, the implicit rules described in the previous section may not
+meet the needs of an extension. For example, some source files may be
+located in a non-standard directory, or some additional compiler
+switches are needed only for a specific file etc. In this case, the
+makefile may define its own implicit **and** explicit rules if needed.
+
+The `rules.vc` file defines some compilation and link macros that make
+it easier to consistently define custom build rules.
+It is strongly recommended that if extension makefiles need to define
+their own implicit or explicit rules, they make use of these macros.
+
+
+#### <a id='toc-34'></a>Macros for compilation
+
+An explicit rule may be needed when an object file is to be
+compiled as an application, not a library. The predefined
+implicit rules assume the latter.
+
+>
+    $(TMP_DIR)\tclWinTest.obj: $(WINDIR)\tclWinTest.c
+	    $(CCAPPCMD) $?
+
+The `CCAPPCMD` macro invokes the compiler with all appropriate flags
+for an application object file based on the build configuration and
+places it in `$(TMP_DIR)`. The `CCPKGCMD` macro is similar except it
+is targeted toward compiling to objects that make up a binary
+extension, either as a static library or a DLL, based on the build
+configuration. Finally, the `CCSTUBSCMD` macro is intended for
+compiling objects for stubs libraries in cases where the extension
+implements its own stubs interface.
+
+Another case that requires an explicit rule is when the object file name
+does not match the name of the source file. In this case, the `CC*`
+macros cannot be used either because they also assume the object file
+name to be derived from the source file name. In this case, we have to
+drop down to lower level macros.
+
+>
+    $(TMP_DIR)\tclMain2.obj: $(GENERICDIR)\tclMain.c
+	        $(cc32) $(pkgcflags) -DTCL_ASCII_MAIN -Fo$@ $?
+
+In the above example, the object file name does not match the source
+file and requires an explicit rule where we make use of the `cc32`
+macro which defines the compiler in use and `pkgcflags` which
+encapsulates the compiler switches for the build configuration. The
+rule also happens to define a C preprocessor macro specific to this
+object file. Note `pkgcflags` will already include the standard C
+preprocessor definitions as well as the ones in `PRJ_DEFINES`. 
+
+The `pkgcflags` macro and similar for other build targets are shown in
+the table below. All of these are defined in `rules.vc` and expand to
+the appropriate compiler switches and flags based on the build
+configuration and the intended use (application object files, DLL
+object files etc.)
+
 
 Macro|Description
 -----|-----------
@@ -676,46 +800,61 @@ of the scope of the nmake build system.
 The last entry in the table above, `stubscflags` is used to compile
 an extension's stubs library, if it provides one (most do not).
 
-It is strongly recommended that if extension makefiles need to define
-their own implicit or explicit rules, they make use of the above
-macros. If they need additional flags, they can be added as described
-in the next section.
+#### <a id='toc-35'></a>Macros for linking
 
-### <a id='toc-28'></a>Passing additional compiler switches
-
-By default, the constructed compiler flags include compiler include
-paths and preprocessor definitions common to all extensions. An
-extension may wish to extend these without having to define its own
-rules. This can be accomplished by defining the following macros 
-**before** including `rules-ext.vc`.
+Similar to compiler switches, `rules.vc` defines standard macros,
+shown in the table below, for linking object files and making libraries.
 
 >
 Macro|Description
 -----|-----------
-`PRJ_DEFINES`|Additional preprocessor defines
-`PRJ_INCLUDES`|Additional directories for locating C header files
+`DLLCMD`|Macro to link object files into a DLL
+`LIBCMD`|Macro to create a static library from object files
+`CONEXECMD`|Macro to link object files into a console program
+`GUIEXECMD`|Macro to link object files into a GUI program
 
-The contents of these macros are included in the `appcflags`,
-`pkgcflags` compiler switch macros.
+Just like the compiler macros, these take into account the build
+configuration (release/debug, shared/static etc.). Here is a fragment
+from Tcl's makefile that illustrates their use.
 
-## <a id='toc-29'></a>Linker flags
+>
+    !if $(STATIC_BUILD)
+    $(TCLDDELIB): $(TMP_DIR)\tclWinDde.obj
+        $(LIBCMD) $**
+    !else
+    $(TCLDDELIB): $(TMP_DIR)\tclWinDde.obj $(TCLSTUBLIB)
+        $(DLLCMD) $**
+        $(_VC_MANIFEST_EMBED_DLL)
+    !endif
+>
+    $(TCLSH): $(TCLSHOBJS) $(TCLSTUBLIB) $(TCLIMPLIB)
+	    $(CONEXECMD) -stack:2300000 $**
+	    $(_VC_MANIFEST_EMBED_EXE)
 
-Similar to compiler switches, `rules.vc` defines standard macros,
-shown in the table below, for linking object files.
+The `_VC_MANIFEST_EMBED_*` macros are described in a later section.
+
+Note that most extensions do not need to explicitly use these macros
+as the default targets described later already do what is required for
+extensions. The macros are needed either when building application
+executables (as opposed to extension libraries) or multiple libraries
+from one makefile (since the default targets will only build the
+project library).
+
+For situations where additional control is required, the following
+lower level macros may be used.
 
 >
 Macro|Description
 -----|-----------
 `link32`|Linker application name
-`dlllflags`|Switches to pass to the linker for compiling a shared library extension.
-`conlflags`|Switches to pass to the linker for compiling a console application.
-`guilflags`|Switches to pass to the linker for compiling a gui application.
+`dlllflags`|Switches to pass to the linker to build a shared library extension.
+`conlflags`|Switches to pass to the linker to build a console application.
+`guilflags`|Switches to pass to the linker to build a gui application.
+`baselibs`|Windows and compiler libaries
+`tcllibs`|Tcl libraries (only for extensions)
+`tklibs`|Tk libraries (only for Tk extensions)
 
-These flags include a standard set of libraries for linking Tcl
-extensions. If additional libraries are required, they can be
-specified by defining the `PRJ_LIBS` macro before including `rules-ext.vc`.
-
-## <a id='toc-30'></a>Windows resource files
+## <a id='toc-36'></a>Windows resource files
 
 Windows programs and DLL's are expected to have a version resource 
 embedded in them though this is not mandatory. To free the extension
@@ -752,13 +891,13 @@ to be added to the extension makefile **after** including
 
 >
     $(TMP_DIR)\custom.res: $(RCDIR)\custom.rc
-	    $(MAKERESCMD) /DCUSTOMFLAG=1 $<
+	    $(RESCMD) /DCUSTOMFLAG=1 $<
 		
 Note the use of `TMP_DIR` and `RCDIR` in the dependency. The 
-`MAKERESCMD` macro defines the command and associated standard flags to 
+`RESCMD` macro defines the command and associated standard flags to 
 compile a resource definition file.
 
-## <a id='toc-31'></a>Generating pkgIndex.tcl
+## <a id='toc-37'></a>Generating pkgIndex.tcl
 
 The standard default `install` target expects a `pkgIndex.tcl` file to have
 been generated and placed in the `$(OUT_DIR)` output directory. It
@@ -792,9 +931,9 @@ For all other cases, the extension author needs to write their own
 target commands for `pkgindex` that results in a `pkgIndex.tcl` file
 being placed in the `$(OUT_DIR)` directory.
 
-## <a id='toc-32'></a>Targets
+## <a id='toc-38'></a>Targets
 
-### <a id='toc-33'></a>The default target
+### <a id='toc-39'></a>The default target
 
 If unspecified on the command line, the default target is assumed to be 
 `$(PROJECT)`. To change this, define the macro `DEFAULT_BUILD_TARGET`
@@ -806,7 +945,7 @@ before including `rules-ext.vc`. For example,
 Note you have to define the target yourself unless it is predefined or 
 standard.
 
-### <a id='toc-34'></a>Predefined targets
+### <a id='toc-40'></a>Predefined targets
 
 Since most extensions build commands in a similar fashion, the
 `rules.vc` file provides some predefined targets that encapsulate the
@@ -824,12 +963,15 @@ Target|Description
 `default-hose`|Cleans up `$(OUT_DIR)` which normally also includes `$(TMP_DIR)`
 `default-distclean`|Maps to `default-hose` plus cleans up `nmakehlp` helpers.
 `default-setup`|Does common build initialization like creation of output directories.
+`default-install-docs-n`|Copies all `*.n` files from `$(DOCDIR)` to `$(DOC_INSTALL_DIR)`.
+`default-install-docs-html`|Copies all `*.html` and `*.css` files from `$(DOCDIR)` to `$(DOC_INSTALL_DIR)`.
+`default-install-demos`|Copies the `$(DEMODIR)` directory to `$(DEMO_INSTALL_DIR)`.
 
 These pre-defined targets are used as building blocks by the standard
 targets described in the next section as well as potentially by
 additional custom targets defined by a makefile.
 
-### <a id='toc-35'></a>Standard targets
+### <a id='toc-41'></a>Standard targets
 
 Inclusion of the file `targets.vc` defines "standard" targets commonly
 defined in makefiles and shown in the table below. These generally
@@ -848,7 +990,7 @@ Target|Description
 `test`|Runs the extension test suite assuming the script `all.tcl` in `$(TESTDIR)`
 `shell`|Starts a Tcl shell with the built extension's path added to `auto_path`.
 
-### <a id='toc-36'></a>Extending targets
+### <a id='toc-42'></a>Extending targets
 
 In some cases, the standard targets "almost" suffice but are missing
 some additional actions. In such cases, instead of not including the
@@ -867,7 +1009,7 @@ target can be extended with additional commands:
 Note `CPY`, `DOCDIR` and `DOC_INSTALL_DIR` are all predefined or
 computed macros within rules.vc.
 
-### <a id='toc-37'></a>Ignoring standard targets
+### <a id='toc-43'></a>Ignoring standard targets
 
 In the extreme case, the standard targets can be completely ignored
 by the extension makefile by not including `targets.vc`. Note the
@@ -889,13 +1031,40 @@ As an aside, when defining your own commands for building targets, you
 are strongly encouraged to make use of the predefined compiler 
 and linker flags such as `$(pkgcflags)` etc. described elsewhere.
 
-## <a id='toc-38'></a>Stubs
+## <a id='toc-44'></a>Stubs
 
-TBD - using stubs
+There are two separate contexts in terms of discussing stubs when it
+comes to Tcl extensions.
 
-TBD - generating stubs
+* The first is whether the extension should link with the Tcl (and
+potentially Tk) stubs library or directly with the Tcl DLL import
+library.
 
-## <a id='toc-39'></a>Versioning
+* The second only applies to the case where the extension also
+supplies its *own* stubs interface, e.g. as is done by the `tdom` 
+extension.
+
+### <a id='toc-45'></a>Linking with Tcl and Tk stubs libraries
+
+By default, extensions are linked with the Tcl and Tk stubs
+libraries. In effect, this means `/DUSE_TCL_STUBS=1`,
+`/DUSE_TCLOO_STUBS=1` and `/DUSE_TK_STUBS=1` are passed
+to the compiler.
+
+If it is desired to directly link with the Tcl and Tk DLL import
+libraries, pass `nostubs` as one of the values of the `OPTS` macro on
+the command line.
+
+### <a id='toc-46'></a>Generating extension stubs libraries
+
+If an extension has its own stubs library for exported functions,
+define the macro `PRJ_STUBSOBJS` as the name of the source file
+containing the stub definitions. The default targets will then create
+a corresponding stubs library for the extension with the name 
+`$(PROJECT)$(VERSION).lib` and place it in the `$(OUT_DIR)` 
+directory. See the `tdom` extension for an example.
+
+## <a id='toc-47'></a>Versioning
 
 By default, the nmake build determines the version of the extension by 
 looking for a TEA `configure.in` or `configure.ac` file in extension's 
@@ -921,33 +1090,75 @@ with all periods removed.
 
 TBD - Tcl and Tk version macros
 
-## <a id='toc-40'></a>Installation
+## <a id='toc-48'></a>Installation
 
-Installation macros (SCRIPT_INSTALL_DIR etc.)
+The `rules.vc` file defines the macros in the table below containing
+paths to installation directories.
 
-## <a id='toc-41'></a>Manifests
+Macro|Directory
+-----|---------
+`PRJ_INSTALL_DIR`|Main directory where package is to be installed.
+`BIN_INSTALL_DIR`|Directory where package binaries are to be installed.
+`SCRIPT_INSTALL_DIR`|Directory where package Tcl scripts are to be installed.
+`LIB_INSTALL_DIR`|Directory where package static libraries are to be installed.
+`INCLUDE_INSTALL_DIR`|Directory where package include files are to be installed.
+`DOC_INSTALL_DIR`|Directory where package documentation is to be installed.
+`DEMO_INSTALL_DIR`|Directory where demo scripts are to be installed.
 
-TBD - PRJ_MANIFEST
+As described in a previous section, the
+`default-install-*` set of built-in targets make use of these macros
+to install various components.
 
-## <a id='toc-42'></a>Documentation and demos
+## <a id='toc-49'></a>Manifests
 
-TBD - default-install-html default-install-man defailt-install-demos
+Newer Visual C++ compilers support manifest resources
+in programs and DLLs. By default the built-in targets
+embed a manifest. If this is desired, define the `PRJ_MANIFEST` macro
+to contain the path to the manifest file. The built-in targets will
+then use this manifest file as a template, replace the token
+`@MACHINE@` with the appropriate architecture, `X86` or `AMD64` and 
+embed it into the generated DLL.
 
-## <a id='toc-43'></a>Utility macros
+To explicitly embed a manifest in custom rule, you can use one of the
+macros `_VC_MANIFEST_EMBED_DLL` or `_VC_MANIFEST_EMBED_EXE` depending
+on whether the rule is applied to a DLL or a program.
+
+## <a id='toc-50'></a>Documentation and demos
+
+Because documentation generation is not standardised across Tcl and
+extensions, the nmake system does not define any built-in rules related
+to demo scripts or generation of documentation.
+
+Only some basic installation support is
+included through the `default-install-demos`, 
+`default-install-docs-n` and 
+`default-install-docs-html` targets described earlier.
+
+## <a id='toc-51'></a>Utility macros
 
 TBD
 
-## <a id='toc-44'></a>Sanity checking build configuration
+## <a id='toc-52'></a>Sanity checking build configuration
 
 TBD 
 
-# <a id='toc-45'></a>Reference Implementation
+# <a id='toc-53'></a>Reference implementation
 
 The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
+In addition to Tcl and Tk, the `sampleextension`, `thread`, `tclvfs`,
+`tcludp`, `tdom`, `mpexpr` and `tktreectrl` have been converted.
 
+# <a id='toc-54'></a>Examples
 
+The aforementioned extensions may be used as examples of makefiles of
+varying degrees of complexity.
 
-# <a id='toc-46'></a>Copyright
+## <a id='toc-55'></a>Incompatible changes
+
+OPTS values `nothreads` and `tclalloc` are not accepted as Windows
+requires threaded builds.
+
+# <a id='toc-56'></a>Copyright
 
 This document has been placed in the public domain.
 
